--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,9 @@
         <item name="colorAccent">@color/accent</item>
     </style>
 
+    <style name="BottomNavigationViewStyle">
+        <item name="itemBackground">@color/primary</item>
+        <item name="itemIconTint">@color/white</item>
+        <item name="itemTextColor">@color/white</item>
+    </style>
 </resources>
