--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,11 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".view.HomeActivity">
 
-    <FrameLayout
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
@@ -18,4 +13,14 @@
         app:menu="@menu/navigation_menu"
         style="@style/BottomNavigationViewStyle"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
