--- a/app/src/main/res/layout/image_collection_recycler_view_item.xml
+++ b/app/src/main/res/layout/image_collection_recycler_view_item.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:orientation="vertical"
+    android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageView
-
+        android:id="@+id/item_image"
         android:src="@mipmap/ic_launcher_round"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/item_name"
         android:text="titlte"
         android:gravity="center"
         android:layout_width="match_parent"
