--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -13,15 +13,15 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/card_view_meal_type"
+                style="@style/CardViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp">
+                android:layout_height="wrap_content">
 
                 <include layout="@layout/layout_card_view_meal_type" />
 
@@ -29,27 +29,27 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/card_view_when_ate"
+                style="@style/CardViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp">
-
+                android:layout_height="wrap_content">
                 <include layout="@layout/layout_card_view_when_ate" />
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/card_view_what_doing"
+                android:id="@+id/card_view_what_i_ate"
+                style="@style/CardViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp">
+                android:layout_height="wrap_content">
 
                 <include layout="@layout/layout_card_view_what_i_ate" />
+
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/card_view_hunger_satiety"
+                android:id="@+id/card_view_what_doing"
+                style="@style/CardViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp">
+                android:layout_height="wrap_content">
 
                 <include layout="@layout/layout_card_view_what_doing" />
 
@@ -57,13 +57,24 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/card_view_how_i_feel"
+                style="@style/CardViewStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp">
+                android:layout_height="wrap_content">
 
                 <include layout="@layout/layout_card_view_how_i_feel" />
 
             </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/card_view_hunger_satiety"
+                style="@style/CardViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <include layout="@layout/layout_card_view_hunger_level" />
+
+            </android.support.v7.widget.CardView>
+
+
         </LinearLayout>
 
     </ScrollView>
