--- a/app/src/main/res/layout/layout_card_view_meal_type.xml
+++ b/app/src/main/res/layout/layout_card_view_meal_type.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        style="@style/CardViewTitleStyle"
         android:text="@string/what_meal_i_doing_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
