--- a/app/src/main/res/layout/layout_card_view_what_doing.xml
+++ b/app/src/main/res/layout/layout_card_view_what_doing.xml
@@ -7,6 +7,7 @@
 
     <TextView
         android:id="@+id/title"
+        style="@style/CardViewTitleStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/what_was_doing" />
