--- a/app/src/main/res/layout/layout_card_view_when_ate.xml
+++ b/app/src/main/res/layout/layout_card_view_when_ate.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        style="@style/CardViewTitleStyle"
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
