--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
     <color name="white">#FFF</color>
+
+    <color name="item_selected_color">#d7d4d4</color>
+    <color name="item_deselected_color">#FFF</color>
 </resources>
