--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,11 +14,26 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
     </style>
+    <!-- component styles -->
 
     <style name="BottomNavigationViewStyle">
         <item name="android:background">@color/primary</item>
         <item name="itemBackground">@android:color/transparent</item>
         <item name="itemIconTint">@color/white</item>
         <item name="itemTextColor">@color/white</item>
+    </style>
+
+    <style name="CardViewStyle">
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+    </style>
+    <style name="CardViewTitleStyle" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textStyle">bold</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+
     </style>
 </resources>
