--- a/app/src/main/res/layout/fragment_list_meals.xml
+++ b/app/src/main/res/layout/fragment_list_meals.xml
@@ -6,13 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.meals.list.ListMealsFragment">
 
-    <View
+    <apps.esampaio.com.comacerto.view.custom.DateListView
         android:background="#e7e7e7"
         android:id="@+id/navigation_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="0dp"
-        android:layout_height="65dp"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:visibility="gone"
