--- a/app/src/main/res/layout/date_list_view_item.xml
+++ b/app/src/main/res/layout/date_list_view_item.xml
@@ -3,28 +3,33 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/day_item"
-        android:text="04"
+    <LinearLayout
+       android:id="@+id/subview"
+        android:orientation="vertical"
         android:gravity="center"
-        android:textSize="28sp"
+        android:layout_width="50dp"
+        android:layout_height="50dp">
+    <TextView
+
+        android:id="@+id/day_item"
+        android:text="01"
+        android:gravity="bottom"
+        android:textAlignment="gravity"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/week_day_item"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="top|center"
         android:text="seg"
-        android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="@+id/day_item"
-        app:layout_constraintStart_toStartOf="@+id/day_item"
-        app:layout_constraintTop_toBottomOf="@+id/day_item" />
+        android:textSize="10sp" />
+    </LinearLayout>
 
 
 </LinearLayout>
