--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
 
     <color name="item_selected_color">#d7d4d4</color>
     <color name="item_deselected_color">#FFF</color>
+
+    <color name="date_disabled">#BDBDBD</color>
 </resources>
