--- a/app/src/main/res/layout/fragment_daily_meals.xml
+++ b/app/src/main/res/layout/fragment_daily_meals.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <android.support.v7.widget.RecyclerView
+        android:visibility="visible"
         android:id="@+id/daily_meals_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <TextView
+        android:id="@+id/no_meals_registered_text_view"
+        android:visibility="gone"
+        android:text="@string/no_meals_registered"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
