--- a/app/src/main/res/layout/list_foods_recycler_view_item.xml
+++ b/app/src/main/res/layout/list_foods_recycler_view_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="45dp"
+
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
@@ -28,9 +28,12 @@
         android:textSize="16sp"
         android:visibility="visible" />
 
-    <com.shalan.mohamed.itemcounterview.IncDecView
+    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
         android:id="@+id/foodPortion"
-        android:layout_width="93dp"
+        android:layout_width="95dp"
+        app:textSize="14sp"
+        app:textColor="@color/primary"
+        app:backGroundColor="@android:color/transparent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true" />
