--- a/app/src/main/res/layout/list_daily_meal_view_item.xml
+++ b/app/src/main/res/layout/list_daily_meal_view_item.xml
@@ -10,11 +10,10 @@
 
     <ImageView
         android:id="@+id/meal_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_margin="16dp"
-        android:background="@color/primary"
-        android:scaleType="fitCenter"
+        android:scaleType="center"
         android:src="@drawable/meal_lunch" />
 
     <LinearLayout
@@ -56,9 +55,17 @@
                 android:layout_weight="1"
                 android:text="HH:mm"
                 android:textColor="#99000000" />
+
+
         </RelativeLayout>
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
 
     </LinearLayout>
+
 
 
 
