--- a/app/src/main/res/layout/activity_add_new_meal_2.xml
+++ b/app/src/main/res/layout/activity_add_new_meal_2.xml
@@ -78,7 +78,8 @@
             <TextView
                 android:id="@+id/complete_date_text_view"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_height="0dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
@@ -94,7 +95,8 @@
             <TextView
                 android:id="@+id/hour_text_view"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
