--- a/app/src/main/res/layout/list_daily_meal_view_item.xml
+++ b/app/src/main/res/layout/list_daily_meal_view_item.xml
@@ -4,69 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/meal_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="16dp"
-        android:scaleType="center"
-        android:src="@drawable/meal_lunch" />
-
-    <LinearLayout
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="72dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/meal_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="@string/meal_lunch"
-            android:textColor="#de000000"
-            android:textSize="16dp" />
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/meal_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:scaleType="center"
+            android:src="@drawable/meal_lunch" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingRight="16dp"
+            android:paddingTop="16dp">
 
             <TextView
-                android:id="@+id/food_count"
+                android:id="@+id/meal_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/meal_hour"
-                android:text="999"
-                android:textColor="#99000000"
-                android:textSize="14sp" />
+                android:gravity="center_vertical"
+                android:text="@string/meal_lunch"
+                android:textColor="#de000000"
+                android:textSize="16dp" />
 
-            <TextView
-                android:id="@+id/meal_hour"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_weight="1"
-                android:text="HH:mm"
-                android:textColor="#99000000" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/food_count"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toStartOf="@+id/meal_hour"
+                    android:text="999"
+                    android:textColor="#99000000"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/meal_hour"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_weight="1"
+                    android:text="HH:mm"
+                    android:textColor="#99000000" />
 
 
-        </RelativeLayout>
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
-
-
-
+    <View
+        android:layout_marginLeft="82dp"
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
 </LinearLayout>
