--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="item_deselected_color">#FFF</color>
 
     <color name="date_disabled">#BDBDBD</color>
+
+    <color name="dialog_alert_color">#FFEB3B</color>
 </resources>
