--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,4 +47,7 @@
         <item name="android:background">@color/primary</item>
         <item name="titleTextColor">@color/white</item>
     </style>
+
+    <style name="Theme_Dialog" parent="Base.Theme.AppCompat.Dialog">
+    </style>
 </resources>
