--- a/app/src/main/res/layout/fragment_generate_reports.xml
+++ b/app/src/main/res/layout/fragment_generate_reports.xml
@@ -40,7 +40,8 @@
     </com.github.chuross.library.ExpandableLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:visibility="visible"
+        android:id="@+id/generate_report_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -55,6 +56,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <com.github.barteksc.pdfviewer.PDFView
+        android:visibility="invisible"
+        android:id="@+id/pdfView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/period_expandable_layout" />
 
 
 </android.support.constraint.ConstraintLayout>
